[package]
name = "openapi"
version = "0.1.0"
edition = "2021"


[dependencies]
env_logger = "0.9.0"
hyper = {version = "0.14", features = ["full"]}
log = "0.4.17"
tokio = {version = "1", features = ["full"]}


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "openapi"

[dev-dependencies]
reqwest = "0.11.11"
